# nano-agent

./: .env.sample  .gitignore  .mcp.json.sample  README.md  analysis_claude-3-5-sonnet-20241022.py  analysis_claude-3-haiku-20240307.py  analysis_claude-sonnet-4-20250514.py  analysis_gpt-5-nano.py  enhanced_constants_claude-3-5-sonnet-20241022.py  enhanced_constants_claude-3-haiku-20240307.py  enhanced_constants_claude-sonnet-4-20250514.py  enhanced_constants_gpt-5-nano.py  eval_results_1_dummy_test.md  eval_results_2_basic_read_test.md  eval_results_3_file_operations_test.md  eval_results_4_code_analysis_test.md  eval_results_5_complex_engineering_test.md
apps/nano_agent_mcp_server/: .env.sample  .gitignore  pyproject.toml
apps/nano_agent_mcp_server/scripts/: install.sh
apps/nano_agent_mcp_server/src/nano_agent/: __init__.py  __main__.py  cli.py
apps/nano_agent_mcp_server/src/nano_agent/modules/: analysis_gpt-5-mini.py  analysis_gpt-5.py  constants.py  data_types.py  enhanced_constants_gpt-5-mini.py  enhanced_constants_gpt-5.py  files.py  nano_agent.py  nano_agent_tools.py  provider_config.py  token_tracking.py  typing_fix.py
apps/nano_agent_mcp_server/tests/: test_anthropic_provider.py  test_edit_file.py  test_gpt5_models_production.py  test_list_directory_default.py  test_multi_provider.py  test_provider_integration.py
apps/nano_agent_mcp_server/tests/isolated/: test_multi_provider_openai_sdk.py
apps/nano_agent_mcp_server/tests/nano_agent/modules/: test_files.py  test_nano_agent.py  test_nano_agent_integration.py  test_nano_agent_tools.py  (+1 more)
(+41 files in other folders)
